--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -239,9 +239,8 @@
 }
 
 .postboxmobile{
-    width: 221%;
-    margin-left: 5%;
-    margin-bottom:36px 
+    margin-left: 3%;
+    margin-bottom: 36px;
 }
 
 .navbar-brand{
