alignment issue fix

--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -37,10 +37,10 @@
           
           </div>
           <div class="col">
-            <div  style="display: flex;margin-left: 32px;margin-top: 78px;">
-              <div style="margin-right: 16px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{post}}</p> Posts</div>
-              <div style="margin-right: 16px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{follower}}</p> Followers</div>
-              <div style="margin-right: 16px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{following}}</p> Following</div>
+            <div  style="display: flex;margin-left: 19px;margin-top: 78px;">
+              <div style="margin-left: 13px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{post}}</p> Posts</div>
+              <div style="margin-left: 13px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{follower}}</p> Followers</div>
+              <div style="margin-left: 13px;"><p style="font-weight: bold;margin-bottom: 0px;text-align: center;">{{following}}</p> Following</div>
              </div>
           </div>
         <div style="margin-top: 11px " class="col">
