--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -50,7 +50,10 @@
             <div style="display: flex;margin-left: 6px;margin-top: 32px;width: 103%;">
                 
                 <div class="editandviewmobile" (click)="editprofilemobile()" *ngIf="!isfromSearch">Edit profile</div>
-                <div (click)="follow()" class="follow" *ngIf="isfromSearch && !isfollowing">Follow</div>
+                <div (click)="follow()" style="
+                width: 35%;
+                text-align: center;
+            " class="follow" *ngIf="isfromSearch && !isfollowing">Follow</div>
                 <div data-bs-toggle="modal" data-bs-target="#unfollowmodel" class="follow" *ngIf="isfromSearch && isfollowing">Following</div>
                 <div class="editandviewmobile">View archive</div>
                 <div data-bs-toggle="modal" data-bs-target="#settingsModal" ><img src="../../../assets/settings.png" style="width: 33px;height: 28px;margin-left: -7px;cursor: pointer;"/></div>
