--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,12 +42,12 @@
     </div>
     <div [ngStyle]="{
     'border': '1px solid #c2c2c2',
-    'width': mobileview?'100%':'',
+    'width': '100%',
     'height': '61px',
     'margin-top': '12px'}
 " class="row">
 
-<p [ngStyle]="{'margin':mobileview?'17px 33px':'17px 48px'}" >Don't have an account? <a style="
+<p [ngStyle]="{'margin':mobileview?'17px 20px':'17px 48px'}" >Don't have an account? <a style="
     text-decoration: none;
 " routerLink="/signup">Sign up</a></p>
     </div>
