--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -300,12 +300,12 @@
            <div class="col">
             <div>
                 <div style="border-bottom: 1px solid #e0e0e0;" class="profilepicinpost">
-                    <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                    <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                     <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
                     <button style="float: right;border: none;background: none;font-size: 19px;" data-bs-toggle="modal" data-bs-target="#postmoreoption" ><i  class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div style="border-bottom: 1px solid #e1e1e1;margin-bottom: 12px;max-height: 142px;height: 140px;overflow-y: scroll;" class="profilepicinpost">
-                  <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                  <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                   <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
                   <span style="margin-left: 10px;max-width:200px;word-wrap:break-word;">{{postcaption?.substring(0,20)}}</span>
                   <p style="margin-left: 10px;max-width:349px;word-wrap:break-word;">{{postcaption.length>20?postcaption.substring(20):""}}</p>
@@ -314,7 +314,7 @@
                   <mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
                   <div style="margin-top: 10px;" *ngFor="let commentdet of commentdetails">
                     <div style="padding-top: 0px; padding-bottom: 0px; " class="profilepicinpost">
-                      <img [src]="commentdet.imageurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                      <img [src]="commentdet.imageurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                       <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{commentdet.username}}</span>
                       <button data-bs-toggle="modal" data-bs-target="#deletecommentmodal" (click)="opendeletecommentmodal(commentdet.commentuserid, imagename,commentdet.commenttext)" style="float: right;border: none;background: none;font-size: 19px;" ><i  class="fa-solid fa-ellipsis"></i></button>
                       <span style="margin-left: 10px;max-width:200px;word-wrap:break-word;font-size: 13px">{{commentdet.commenttext?.substring(0,30)}}</span>
@@ -366,12 +366,12 @@
        ">
             <div>
                 <div style="border-bottom: 1px solid #e0e0e0;" class="profilepicinpost">
-                    <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                    <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                     <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
                     <button style="float: right;border: none;background: none;font-size: 19px;" data-bs-toggle="modal" data-bs-target="#postmoreoptionmobile" ><i  class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div style="border-bottom: 1px solid #e1e1e1;margin-bottom: 12px;max-height: 142px;height: 140px;overflow-y: scroll;width: 107%;" class="profilepicinpost">
-                  <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                  <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                   <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
                   <span style="margin-left: 10px;max-width:200px;word-wrap:break-word;">{{postcaption?.substring(0,20)}}</span>
                   <p style="margin-left: 10px;max-width:349px;word-wrap:break-word;">{{postcaption.length>20?postcaption.substring(20):""}}</p>
@@ -380,7 +380,7 @@
                   <mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
                   <div style="margin-top: 10px;" *ngFor="let commentdet of commentdetails">
                     <div style="padding-top: 0px; padding-bottom: 0px; " class="profilepicinpost">
-                      <img [src]="commentdet.imageurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                      <img [src]="commentdet.imageurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;object-fit: contain;" />
                       <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{commentdet.username}}</span>
                       <button data-bs-toggle="modal" data-bs-target="#deletecommentmodal" (click)="opendeletecommentmodal(commentdet.commentuserid, imagename,commentdet.commenttext)" style="float: right;border: none;background: none;font-size: 19px;" ><i  class="fa-solid fa-ellipsis"></i></button>
                       <span style="margin-left: 10px;max-width:200px;word-wrap:break-word;font-size: 13px">{{commentdet.commenttext?.substring(0,30)}}</span>
